# ELE32

./: lab4.txt  output.txt  pyproject.toml  sparse_matrix_N_1001.csv  sparse_matrix_N_203.csv  sparse_matrix_N_497.csv  sparse_matrix_N_98.csv
lab01_ELE32/: bsc.py  custom_encode.py  hamming.py  main.py  no_encode.py
lab02_ELE32/: chebyshev.py  cyclic_encode.py  find_minimal_distance.py  generator_polys.py  hamming.py  main.py  main2.py  test2.py  test3.py
lab03_ELE32/: bsc.py  chebyshev.py  generator_polys.py  hamming.py  ldpc.py  main.py  main2.py  no_encode.py
lab04_ELE32/: bit_flipping_ldpc.py  bpsk.py  chebyshev.py  cyclic_encode.py  hamming.py  ldpc.py  llr_ldpc.py  llr_ldpc_2.py  llr_ldpc_parallel.py  llr_ldpc_sparse.py  main.py  no_encode.py
