[tool.poetry]
name = "ele32"
version = "0.1.0"
description = ""
authors = ["lhzuin <luishenriquezuinruiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.1"
numpy = "^1.24.3"
scipy = "^1.10.1"
sympy = "^1.12"
matplotlib = "^3.7.1"
numba = "^0.57.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
